# chat

./: .gitmodules  LICENSE
client/: ChatClient.pro
client/qml/: main.qml  qml.qrc
client/qml/ChatComponents/: FindMessageField.qml  Message.qml  MessageList.qml  MessageTextField.qml  RoomList.qml  chat.qml
client/src/: main.cpp
client/src/models/: messagelistmodel.cpp  messagelistmodel.h  roomlistmodel.cpp  roomlistmodel.h
server/: CMakeLists.txt
server/src/: main.cpp  server.cpp  server.h  user.cpp  user.h  userlist.cpp  userlist.h
